# t12r

./: .gitignore  .rubocop.yml  .travis.yml  Cargo.toml  Gemfile  README.md  Rakefile  t12r.gemspec
ext/: Rakefile
lib/: t12r.rb
lib/t12r/: i18n_monkeypatch.rb  rusty_transliterator.rb
src/: lib.rs
test/: bench_t12r.rb  test_t12r.rb
