[package]
name = "t12r"
version = "0.1.6"
authors = ["Mark Lee <Mark.Lee@infogroup.com>"]
repository = "https://github.com/data-axle/t12r"
license = "Apache-2.0"
publish = false

[features]
lint = ["clippy"]

[dependencies]
ruru = "0.9"
unidecode = "0.2"

clippy = { version = "*", optional = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.thermite]
github_releases = true
