[package]
name = "t12r"
version = "0.1.8"
authors = ["Mark Lee <Mark.Lee@infogroup.com>"]
repository = "https://github.com/data-axle/t12r"
license = "Apache-2.0"
publish = false

[dependencies]
ruru = "0.9"
unidecode = "0.3"

[replace]
"ruby-sys:0.2.20" = { git = "http://github.com/malept/ruby-sys", branch = "test-osx-and-static-builds" }

[lib]
crate-type = ["cdylib"]

[package.metadata.thermite]
github_releases = true
